@@ -1,3 +1,6 @@
+* 2005-05-14 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Start of new widget property GUI
+	
 * 2005-05-11 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Make super and subscripts move further up and down
 	- Adjust alignment code to take account of above modification
